<resources>
    <string name="app_name">TheModfather</string>
    <string name="greeting_text">Who are you?</string>
    <string name="role_mod">Mod</string>
    <string name="role_player">Player</string>
    <string name="host_game">Host Game</string>
    <string name="join_game">Join Game</string>
    <string name="start_game">Let\'s begin</string>
    <string name="connection_count">Connections\n%d</string>
    <string name="game_name_hint">Give your game a name</string>
    <string name="player_name_hint">What should we call you?</string>
    <string name="config_instructions">Make your pick:\n(Long press a character to know more)</string>
    <string name="join_game_instruction">Pick a game to join:</string>
    <string name="config_hint">Note: Villagers, Mafia and Godfather are picked by default.</string>
    <string name="join_game_note">Note: Pick only one of the above</string>
    <string name="submit_text">Submit</string>
    <string name="sleep_text">Sleep</string>
    <string name="morning_notification">The Village wakes up to the death of </string>
    <string name="ok_button">OK</string>
    <string name="skip_text">Skip</string>
    <string name="main_instructions">1. Connect the mod and all players to a common wifi for better connectivity.
            \n\n2. DO NOT turn off the bluetooth, it is required to connect players to the mod.
        \n\n3. If it takes too long to discover or connect to hosts, restart the player app.
        \n\n4. Location permissions are required to set up the connection and storage permissions for logging.
        \n\n5. Disconnecting in the middle of the game treats you to be dead.</string>
    <string name="go_to_sleep">Go to sleep</string>
    <string name="version">v1.1</string>
    <string name="tagline">Made with \u2665 for you.</string>
</resources>

