<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/greeting"
            android:layout_above="@+id/choose_role"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/greeting_text"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choose_role"
            android:layout_centerInParent="true"
            android:padding="16dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/pick_mod"
                android:layout_weight="1"
                android:text="@string/role_mod"
                android:background="@drawable/styled_button"
                android:textAllCaps="false"
                android:textColor="@color/button_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/pick_player"
                android:layout_weight="1"
                android:text="@string/role_player"
                android:background="@drawable/styled_button"
                android:textAllCaps="false"
                android:textColor="@color/button_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:text="@string/version"
        android:textSize="12sp"
        android:gravity="center"/>

</RelativeLayout>